# browser-pilot

./: .gitignore  README.md  README.zh.md  Start-CdpLanBridge.ps1  agent_cdp.py  browser_start_client.ps1  browser_use_mcp_server_cdp.py  pyproject.toml  req.json  requirements.txt  start_agent.ps1  start_agent.sh  token
frontend/browser-agent/: dist.crx  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/browser-agent/sidepanel/: index.html
frontend/browser-agent/src/: App.tsx  globals.css  main.tsx  vite-env.d.ts
frontend/browser-agent/src/components/: ImageAttachmentPreview.tsx  Settings.tsx
frontend/browser-agent/src/components/assistant-ui/: PlanSection.tsx  markdown-text.tsx  thread.tsx  tool-fallback.tsx
frontend/browser-agent/src/components/ui/: breadcrumb.tsx
frontend/browser-agent/src/lib/: useAgentExecution.ts  useCustomRuntime.ts  useImageAttachments.ts
frontend/scripts/: Start-ChromeCDP-Tunnel.ps1  Stop-CdpLanBridge.ps1  browser_start_client.ps1
src/super_agent/agent/: api_runtime.py  api_runtime_cdp.py  context_manager.py  o3_handler.py  prompt_templates.py  prompt_templates_ori.py  super_config.py  super_factory.py  super_react_agent.py  todo.md  tool_call_handler.py  utils.py
src/super_agent/api/: schemas.py  server.py  settings.py
src/super_agent/llm/: __init__.py  openrouter_function_call_example.py  openrouter_llm.py
src/super_agent/test/: super_react_agent_example.py  super_react_agent_example_mcp.py  super_react_agent_test_run.py  test_phase1_refactoring.py
src/super_agent/tool/: logger.py
src/super_agent/tool/browser/: action_memory.py  base.py  cdp.py  controller.py  controller_longer_with_own_registry.py  litellm.py  local_proxy.py  logger.py  message_manager.py  tools.py
src/super_agent/tool/browser/http_server/video_viewer/: player.html
src/super_agent/tool/browser/utils/: __init__.py  agent_types.py  logger.py  tool_validation.py
src/super_agent/tool/browser/utils/utils/: agent_types.py  path_utils.py
src/super_agent/tool/mcp_servers/: README.md  __init__.py  audio_mcp_server.py  auto_browser.py  browser_session.py  browser_use_mcp_server.py  doubter.py  models.py  perplexity_search.py  python_server.py  reading_mcp_server.py  reading_mcp_server_gemini.py  reasoning_mcp_server.py  searching_mcp_server.py  searching_mcp_server_old.py  selfevolution.py  vision_mcp_server.py  wiki_mcp_server.py
src/super_agent/tool/mcp_servers/activate/: start_mcp_server.sh  start_mcp_servers.ps1
src/super_agent/tool/mcp_servers/utils/: base_search.py  bing_search.py  ddg_search.py  perplexity.py  query_enhancer.py  search_content_judge.py  smart_request.py
test/: auto_browser_cdp.py  minimal_agent_browser_sse_test.py  minimal_browser_use_mcp_server.py  test_cdp.py
website_database/: site_action_memory.jsonl
